0.03
 - Improve SEE ALSO section in doc.
 - Improve width of output image for EXAMPLE section in doc.
 - Update Module::Install to 1.16 version.
 - Update copyright years.

0.02 2014-12-23T14:57:31+01:00
 - Add output image for EXAMPLE section in doc to html doc.
 - Improve LICENSE AND COPYRIGHT section in doc.

0.01 2014-11-15T02:15:10+01:00
 - First version.