@@ -107,7 +107,7 @@ AUTHOR
     <http://skim.cz>
 
 LICENSE AND COPYRIGHT
-     © 2012-2014 Michal Špaček
+     © 2012-2015 Michal Špaček
      BSD 2-Clause License
 
 VERSION
